--- a/styles.css
+++ b/styles.css
@@ -574,7 +574,229 @@ transform: scale(1.5);
   }
 }
 
+/* sstyle do news i formularz */
 
+/* News */
+.newsform
+{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 1260px;
+    background: #38475a;
+    padding: 40px 10px;
+    justify-content: center;
+}
+
+.news
+{
+    width: 65%;
+    height: auto;
+    margin: 20px 30px 0 0;
+    color: grey;
+}
+
+.news-part
+{
+    display: flex;
+}
+
+.part1
+{
+    margin: 0 0 30px 0;
+}
+
+.part2
+{
+    margin: 60px 0 0 0;
+}
+
+.news-text
+{
+    width: 620px;
+    padding: 0 0 0 15px;
+}
+
+.news img
+{
+    border-radius: 10px;
+}
+
+
+
+.form
+{
+    height: auto;
+    margin: 20px 0 0 30px;
+}
+
+.flex-grow
+{
+    flex-grow: 1;
+}
+
+.newsform-title
+{
+    display: flex;
+    flex-direction: column;
+    color:#22af8d;
+}
+
+.form-title-container
+{
+    display: flex;
+}
+
+
+.newsform-title > h2
+{
+    margin:0 0;
+
+}
+
+.newsform-title > h3
+{
+    margin:0 0 15px 0;
+    font-weight: 100;
+}
+
+
+.form-icon-container
+{
+    background-color:#22af8d;
+    width: 50px;
+    font-size: 15px;
+    height: 45px;
+    color:white;
+    border-radius: 10%;
+    margin: 0 15px 0 0;
+}
+
+.news-more
+{
+    width: 85px;
+    height: 20px;
+    background-color: #22af8d;
+    border-radius: 7px;
+    padding: 12px 3px 10px 3px;
+    text-align: center;
+    margin-top: 5px;
+    font-weight: 700;
+    transition: transform 1s ease-in-out;
+    
+}
+
+.news-more:hover
+{
+    background-color: #21997c;
+    transform: scale(1.3);
+}
+
+
+
+u-marginLeft--sm {
+    margin-left: 15px !important;
+ }
+
+.news-more > .fa-arrow-right
+{
+    margin-left: 5px;
+}
+
+/* Formularz */
+
+input 
+{
+    width: 90%;
+    color: #efefef;
+    border-radius: 10px;
+    font-size: 16px;
+    padding: 10px;
+    outline: none;
+    margin-bottom: 10px;
+    background-color: #313e4f;
+    border: 2px solid #4d607a;
+    font-family: 'Roboto', sans-serif;
+}
+
+input:focus
+{
+    border: 2px solid #22af8d;
+    background-color: #465870;
+}
+
+textarea
+{
+    width: 90%;
+    border-radius: 10px;
+    font-size: 16px;
+    padding: 10px;
+    outline: none;
+    background-color: #313e4f;
+    border: 2px solid #4d607a;
+    color: #efefef;
+    font-family: 'Roboto', sans-serif;
+    
+}
+
+textarea:focus
+{
+    border: 2px solid #22af8d;
+    background-color: #465870;
+}
+
+button
+{
+    width: 82px;
+    background-color: #22af8d;
+    font-size: 16px;
+    color: white;
+    padding: 10px 5px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    letter-spacing: 2px;
+    font-family: 'Roboto', sans-serif;
+    outline: none;
+    font-weight: 700;
+    letter-spacing: 0px;
+    transition: transform 1s ease-in-out;
+}
+
+button:hover
+{
+    background-color: #21997c;
+    transform: scale(1.5) rotate(360deg);
+}
+
+button:focus
+{
+    background-color: #21997c;
+}
+
+/* Media do news i formularz */
+
+@media screen and (max-width: 1024px){
+    .newsform {
+        font-size: 14px;
+        height: 100%;
+        justify-content: center;
+
+    }
+
+    .news {
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+    }
+
+    .form {
+        margin-top: 80px;
+    }
+
+}
 
 /*
  Footer
