--- a/styles.css
+++ b/styles.css
@@ -430,7 +430,7 @@ a:visited
 -ms-transition: all  0.5s linear;
 -o-transition: all  0.5s linear;
 transition: all  0.5s linear;
-    animation: pulse 1000ms ease-in-out infinite;
+  /*  animation: pulse 1000ms ease-in-out infinite; THIS ANIMATION IS IRRITATING*/
 }
 @keyframes pulse
 {
